# proyecto-de-software

./: .env  .gitignore  README.md  docker-compose.yml
admin/: Dockerfile  app.py  docker-compose.yml  entrypoint.sh  package-lock.json  pyproject.toml  tailwind.config.js
admin/src/core/: bcrypt.py  database.py  seeds.py
admin/src/core/forms/: system_form.py  user_form.py
admin/src/core/models/: __init__.py  user.py  validation.py
admin/src/core/models/institution/: __init__.py  institution.py  service.py
admin/src/core/models/permission/: __init__.py  permission.py
admin/src/core/models/role/: __init__.py  role.py
admin/src/core/models/service_order/: __init__.py  service_order.py
admin/src/core/models/system/: __init__.py  system.py
admin/src/core/models/user/: __init__.py  user.py
admin/src/core/models/user_institution/: __init__.py  user_institution.py
admin/src/core/models/users/: __init__.py  user.py
admin/src/web/: __init__.py  config.py  error.py  mail.py  oauth.py  routes.py  token.py
admin/src/web/controllers/api/: __init__.py  auth.py  contact.py  data.py  institution.py  logged_user.py  service.py  users.py
admin/src/web/controllers/authentication/: auth.py
admin/src/web/controllers/home/: home.py
admin/src/web/controllers/institutions/: institution_users.py  institutions.py  services.py
admin/src/web/controllers/issues/: issues.py
admin/src/web/forms/: institution_form.py  login_form.py  service_form.py  user_form.py
admin/src/web/helpers/: auth.py
admin/src/web/schemas/: auth.py  institutions.py  service_orders.py  services.py  state_orders.py  users.py
admin/src/web/templates/: error.html  home.html  layout.html  login.html
admin/static/css/: error.css  layout.css  notifications.css
admin/static/js/: institution.js  institution_owners_users.js  institution_users.js  institutions.js  layout.js  service.js  services.js  system.js
admin/static/src/: input.css
calculadora/: main.py
(+63 files in other folders)
