[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Juana Borrelli Zara <jborrellizara@gmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8.10"
flask = "2.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
